# nims

./: .fitpc.lb  .svnignore  .tm_properties  CMakeLists.txt  DISCLAIMER.md  LICENSE.md  README.md  _new.cpp  config.yaml  detector.cpp  fitpc.tex  frame_buffer.cpp  frame_buffer.h  ingester.cpp  nims.cpp  nims.sh  nims_includes.h  task.cpp  task.h  test_frame_buffer_get.cpp  test_frame_buffer_put.cpp  tracker.cpp
cmake/Modules/: yaml-cpp-targets.cmake
doc/: NIMS_release_notes.html  fitpc.tex
nims-source/: CMakeLists.txt  _new.cpp  config.yaml  data_source.cpp  data_source.cpp~  data_source.h  data_source.h~  data_source_blueview.cpp  data_source_blueview.h  data_source_ek60.cpp  data_source_ek60.h  data_source_m3.cpp  data_source_m3.cpp~  data_source_m3.h  data_source_m3.h~  data_source_m3raw.cpp  detections.h  detector.cpp  frame_buffer.cpp  frame_buffer.h  ingester.cpp  log.cpp  log.h  m3_beamform.cpp  m3_beamform.h  m3sim.cpp  nims.cpp  nims_includes.h  nims_ipc.cpp  nims_ipc.h  pixelgroup.cpp  pixelgroup.h  queues.cpp  queues.h  task.cpp  task.h  test_frame_buffer.cpp  test_frame_buffer_get.cpp  test_frame_buffer_put.cpp  tracked_object.cpp  (+3 more)
nims-source/cmake/Modules/: yaml-cpp-config.cmake
nims-source/nims_py/: CMakeLists.txt  nims_py.cpp  nims_py.pxd  nims_py.pyx  nims_py_ext.cpp  nims_py_ext.h  setup.py.in  tracks_client.py  tracks_message.h  tracks_server.py
scripts/: build-fish.sh  build-nims.sh  clean-nims.sh  client.py  cmake-nims.sh  install-nims.sh  m3sim.sh  nims-init  nims.sh  test-ingester.sh  test-nims.sh
src/: CMakeLists.txt  _new.cpp  _new.h  archiver.cpp  config.yaml  data_source_amp-m3.cpp  data_source_amp-m3.h  data_source_blueview.cpp  data_source_m3.h  display_ping_image.cpp  frame_buffer.cpp  ingester.cpp  m3sim.cpp  nims.cpp  nims_ipc.cpp  nims_ipc.h  task.h  tracker.cpp  tracks_message.h  viewer.cpp
src/nims_py/: CMakeLists.txt  nims_py.pxd  nims_py.pyx  nims_py_ext.h  setup.py.in
test/: CMakeLists.txt  client.py  eval_detections.r  eval_ingester_frames.r  proc_time.r  server.py  test_blueview.cpp  test_ek60.cpp  test_frame_buffer_get.cpp  test_m3_multi-client.sh  test_m3_save.cpp  test_pixelgroup.cpp  test_sqlite3.cpp  test_types.cpp
vendorsrc/bvt_sdk_4.2.0.9446/include/: bvt_sdk.h
vendorsrc/bvt_sdk_4.2.0.9446/include/bvt_c/: bvt_colorimage.h  bvt_colormapper.h  bvt_error.h  bvt_eventmark.h  bvt_head.h  bvt_imagegenerator.h  bvt_logger.h  bvt_magimage.h  bvt_navdata.h  bvt_networksettings.h  bvt_orientation.h  bvt_ping.h  bvt_rangeprofile.h  bvt_retval.h  bvt_sdk.h  bvt_sonar.h  bvt_sonardiscoveryagent.h
vendorsrc/bvt_sdk_4.2.0.9446/include/bvt_cpp/: bvt_addressmode.hpp  bvt_colorimage.hpp  bvt_colormapper.hpp  bvt_error.hpp  bvt_eventmark.hpp  bvt_fluidtype.hpp  bvt_head.hpp  bvt_imagefilterflags.hpp  bvt_imagegenerator.hpp  bvt_imageprocessingmethod.hpp  bvt_imageres.hpp  bvt_imagetype.hpp  bvt_logger.hpp  bvt_loglevel.hpp  bvt_magimage.hpp  bvt_mountside.hpp  bvt_mounttype.hpp  bvt_navdata.hpp  bvt_networksettings.hpp  bvt_orientation.hpp  bvt_ping.hpp  bvt_rangeprofile.hpp  bvt_retval.hpp  bvt_sdk.hpp  bvt_sonar.hpp  bvt_sonardiscoveryagent.hpp  bvt_triggeroutputevent.hpp
vendorsrc/bvt_sdk_4.2.0.9446/include/bvt_python/: __init__.py  colorimage.py  colormapper.py  error.py  eventmark.py  head.py  imagegenerator.py  logger.py  magimage.py  navdata.py  networksettings.py  orientation.py  ping.py  rangeprofile.py  sdk.py  sdkerror.py  sonar.py  sonardiscoveryagent.py
vendorsrc/bvt_sdk_4.2.0.9446/lib/: libbvtsdk.so.4  libbvtsdk.so.4.2.0
webapp/: cleanrun  configwebsocket.py  echometrics  echometrics.py  echowebsocket.py  frame_thread.py  frames.py  index.html  message_queue.py  nims.py  realtime_echometrics.py
webapp/docs/: configwebsocket.py.txt  echometrics.py.txt  echowebsocket.py.txt  frame_thread.py.txt  frames.py.txt  nims.py.txt  realtime_echometrics.py.txt
webapp/static/: layout.css  nims.js
webapp/static/docs/: nims.html
webapp/templates/: config.html  index.html
